user-scalable=no

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="shortcut icon" href="/favicon.ico" />
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
     <link rel="manifest" href="/site.webmanifest" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     
     <title><%= APP_NAME %> - Collection of Useful Developer Tools</title>
     <meta name="description" content="A collection of useful developer tools in one place. JSON Formatter, Base64 Encoder, UUID Generator, Timestamp Converter, Hash Generator, and more. All tools work in the browser without any backend." />
